Got the API key.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>  
@@ -28,7 +28,7 @@
   
 
   <!-- TODO include our flicklist.js script -->
-  <script src="???"></script>
+  <script src="./js/flicklist.js"></script>
 
 </body> 
 </html>
